Add bandcamp url to output
